# CGAlpha_0.0.1-Aipha_0.0.3

./: .env.example  .env.fix6  .gitignore  00_COMIENZA_AQUI.md  ANALISIS_COMPLETO.txt  AUDIT_DEEP_CAUSAL_V03.md  AUDIT_REPORT_V2.md  CHANGELOG_ALGO.md  CHANGELOG_TRIPLE_COINCIDENCIA_5M.md  CHANGELOG_v0.0.3.md  CLEANUP_REPORT.md  CODEX_ENTRIES_DRAFT.md  DIAGNOSTICO_ANALISIS_v0.0.3.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_INDEX.md  ENHANCED_DIAGNOSTIC_SYSTEM.md  GENERATE_PDF.sh  GUIA_CLI_PANEL_CONTROL.md  GUIA_IMPLEMENTACION_MEJORAS.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_SUMMARY.md  INDICE_DOCUMENTOS_ANALISIS.md  LILA_v3_NORTH_STAR.md  LOCATION_VERIFIED.md  ORACLE_v2_PRODUCTION_REPORT.md  PARAMETROS_REVISION_Y_CORRECCIONES.md  PARTE_6_ANALISIS_INTEGRAL.md  PERFORMANCE_BASELINE_v0.1.0.md  README.md  RELEASE_NOTES_v0.1.0.md  REPORTE_DETECCION_ENTRENAMIENTO_CORREGIDO.md  REPORTE_ORACLE_MULTIYEAR_VALIDATION.md  REPORTE_PRUEBA_EFECTIVIDAD_ORACLE.md  RESUMEN_EJECUTIVO_v0.0.3.md  RESUMEN_VALIDACION_ORACLE_FINAL.md  RESUMEN_VISUAL_1PAGINA.md  ROADMAP_EJECUTIVO.md  ROADMAP_v0.1.0_FINAL.md  STATIC_ANALYSIS_REPORT.md  SYSTEM_STATUS.md  (+29 more)
.context/: ACTION_REPORT.md  CHANGELOG.md  LEARNING_PLAN.md  PHASE_1_ANALYSIS.md  README.md  decisions.jsonl  learning_progress.json  migration_status.json
.learning/: LEARNING_PLAN.md  README.md
.qwen/: settings.json
aipha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aipha_memory/: action_history.jsonl  evolutionary_bridge.jsonl
aiphalab/: assistant.py  cli.py  cli_v2.py  dashboard.py  formatters.py
cgalpha/: __init__.py  orchestrator.py
cgalpha_v3/: .env  CHECKLIST_IMPLEMENTACION.md  PROMPT_AUDITORIA_P2_SESSION_v1.md  PROMPT_MAESTRO_v3.0-audit.md  PROMPT_MAESTRO_v3.1-audit.md  README.md  coverage.xml
cgalpha_v4/: CRB_BinanceWebSocketManager_P3.md  CRB_DeferredOutcomeMonitor_P4.md  CRB_TripleCoincidenceDetector_P5.md  LILA_V4_PROMPT_FUNDACIONAL.md  RECONSTRUCTION_BRIEF.md  S2_MISION_PRIMARIA.md  WHITEPAPER.md  __init__.py  oracle_v6_skeleton.py  test_oracle_v6_skeleton.py
config/: cgalpha-logrotate.conf  cgalpha-watchdog.service
core/: atomic_update_system.py  change_evaluator.py  config_manager.py  config_validators.py  context_sentinel.py  exceptions.py  execution_queue.py  health_monitor.py  llm_assistant.py  llm_assistant_v2.py  llm_client.py  memory_manager.py  orchestrator_hardened.py  performance_logger.py  quarantine_manager.py  trading_engine.py  type_hints_generator.py
data_postprocessor/: README.md
data_processor/: README.md  acquire_data.py  logging_config.py  requirements.txt
docs/: CGALPHA_MASTER_DOCUMENTATION.md  DOCS_COVERAGE_MATRIX.md  DOCS_INDEX.md  DOCS_RETENTION_TABLE.md  LLM_LOCAL_OPERATIONS.md
documentation/: 2.5.18:00_para_revision_con_claude_Development Chronicle.md  3.5. opus_chat_revision .md  A_filter.docx  CODEX_EXECUTIVE_BRIEF.md  CODEX_MIGRATION_V4_RETROANALYSIS.md  CODEX_RUNBOOK.md  CODEX_SLIDES.md  CODEX_SLIDES_MARP.md  EVO_TICKET_LOG.md  Fixing Oracle Retraining.md  Hardening CGAlpha Microstructure Pipeline.md  NEXUS_SUPERIOR.md  Optimizing ZigZag Threshold Calibration.md  RECONSTRUCTION_MAP_UPDATE_TEMPLATE.md  S0_a_chat_original.md  S0_b_codex_analisis.md  S0_c_gemini_ejecution.md  S0_d_hasta 24h.md  architectural_analysis.md  (+4 more)
(+1463 files in other folders)
