[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipha"
version = "0.0.2"
description = "Sistema autónomo de auto-mejora para trading"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vaclav", email = "vaclav@aipha.dev"}
]

dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=0.24.0",
    "duckdb>=0.5.0",
    "rich>=10.0.0",
    "pydantic>=1.8.0",
]

[project.scripts]
aipha = "aiphalab.cli:cli"

[project.urls]
Homepage = "https://github.com/vaclav/Aipha"
Repository = "https://github.com/vaclav/Aipha"

[tool.setuptools]
packages = ["core", "aiphalab", "oracle", "data_processor", "trading_manager", "simulation"]
